voting-app/1-voting-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: vote-app
  labels:
    app: vote-app
    appType: frontend
spec:
  containers:
    - name: vote-app
      image: saurabhd2106/vote-app
