voting-app/3-worker-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: worker-app
  labels:
    app: worker-app
    appType: frontend
spec:
  containers:
    - name: worker-app
      image: saurabhd2106/worker-app
