voting-app/4-redis-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis-app
    appType: frontend
spec:
  containers:
    - name: redis-app
      image: redis:5.0-alpine3.10
