voting-app/5-postgress-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: db-app
    appType: frontend
spec:
  containers:
    - name: db-app
      image: postgres:9.4
      ports:
          - containerPort: 5432
            name: db
