voting-app/6-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    appType: frontend
spec:
  type: ClusterIP 
  selector:
    appType: frontend
  ports: 
    - name: http
      port: 6379 # Service Port
      targetPort: 6379 # Container Port
