voting-app/7-postgress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP 
  selector:
    appType: frontend
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 5432 # Container Port
