voting-app/8-result-node-app.yml
apiVersion: v1
kind: Service
metadata:
  name: result-service 
spec:
  type: NodePort 
  selector:
    appType: frontend
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 5001 # Container Port
      nodePort: 31231 # NodePort
