voting-app/9-vote-node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote-service 
spec:
  type: NodePort 
  selector:
    appType: frontend
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 5000 # Container Port
      nodePort: 31232 # NodePort
