voting-app/vote-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ec2-13-127-13-201.ap-south-1.compute.amazonaws.com
    http:
      paths:
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
